2009-12-15  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Preserve original nargout. Call
	functions with this value. Use nargout1 to possibly accumulate extra
	outputs, as long as they are defined.

2009-12-14  Jaroslav Hajek  <highegg@gmail.com>

	* ov-range.cc (octave_range::do_index_op): Defer single subscript to
	new Range methods.

2009-12-14  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.cc (symbol_table::cleanup): New static method.
	* symtab.h: Declare it.
	* toplev.cc (clean_up_and_exit): Call it here.

2009-12-12  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::toggle_grid,
	plot_window::axis_auto): Modify the axes of the correct figure.

2009-12-12  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::plot_window):
	Handle case where window is created but not visible. Cache
	window label.
	(figure_manager::toggle_window_visibility,
	(figure_manager::do_toggle_window_visibility): New methods.
	(fltk_backend::property_change): Handle figure visibility change.

2009-12-11  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (base_properties::all_dynamic_properties):
	No longer static.
	(base_properties::set (const caseless_str&, const octave_value&)):
	Only provide decl, not definition.
	(base_properties::set (const caseless_str&, const std::string&,
	const octave_value&)): Delete.
	(base_properties::dynamic_properties): Rename from
	all_dynamic_properties.  No longer static.  Now protected.
	(base_properties::has_dynamic_property,
	base_properties::dynamic_property_names,
	base_properties::set_dynamic): Omit class name argument.
	* graphics.cc (base_properties::all_dynamic_properties):
	Delete obsolete definition.
	(base_properties::dynamic_property_names): Now const.
	Omit class name argument.  Simply return dynamic_properties set.
	(base_properties::has_dynamic_property): Omit class name argument.